--- a/main.css
+++ b/main.css
@@ -36,8 +36,8 @@ a {
 #wrapper {
 	display: flex;
 	padding: .5rem;
-	max-width: 1400px;
 	margin: 0 auto;
+	max-width: 1400px;
 }
 
 #nav {
@@ -49,6 +49,7 @@ a {
 
 #main {
  	max-width: 1100px;
+ 	margin-left: 0;
 }
 
 #portfolio{
@@ -125,5 +126,70 @@ a:visited {
 }
 a:hover {
 	color: red;
+}
+
+@media screen and (max-width: 768px){
+#wrapper {
+	display: flex;
+	padding: .1rem;
+	margin: 0 auto;
+	flex-direction: column;
+}
+
+#nav {
+	width: 100%;
+	text-align: center;
+	height: 400px;
+	padding: .5rem;
+	display: flex;
+	flex-direction: column;
+	order: 1;
+	border: 1px solid black;
+
+}
+
+#main {
+	display: flex;
+	width: 100%;
+	margin: 0 auto;
+	order: 2;
+}
+
+.header {
+	margin-bottom: 3rem;
+	max-width: 150px;
+	margin: 0 auto;
+}
+
+#portfolio{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: .1rem;
+	width: 100%;
+}
+
+.artBox {
+	margin: .2rem;
+	height: 150px;
+	width: 48%;
+	overflow: hidden;
+	display: flex;
+  	justify-content: center;
+}
+.socialLinks li {
+	margin: 0;
+	font-size: 20px;
+	padding: 15px;
+}
+.pageLinks li {
+	padding-right: 0px;
+}
+#links {
+	margin: 30px auto;
+}
+h2 {
+	padding-left: 4px;
+}
 }
 
