--- a/main.css
+++ b/main.css
@@ -81,10 +81,10 @@ img {
 
 h1 {
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 115px;
+	font-size: 120px;
 	letter-spacing: 8px;
 	line-height: 115px;
-	padding: 0;
+	padding-left: 5.3px;
 }
 
 h2 {
@@ -98,9 +98,10 @@ h2 {
 .header{
 	height: 515px;
 	text-align: center;
+	width: 100%;
 }
 #links {
-	margin-right: 30px;
+	margin-right: 15px;
 }
 
 .pageLinks li {
@@ -155,7 +156,7 @@ a:hover {
 
 .header {
 	margin-bottom: 3rem;
-	max-width: 150px;
+	max-width: 300px;
 	margin: 0 auto;
 }
 
@@ -186,13 +187,24 @@ a:hover {
 #links {
 	margin: 30px auto;
 }
-h2 {
-	padding-left: 4px;
+h1 {
+	font-size: 140px;
+	letter-spacing: 8px;
+	line-height: 125px;
+	text-align: center;
+	margin-bottom: 5px;
 }
+
+h2 {
+	font-size: 30px;
+	letter-spacing: 4.5px;
+	line-height: 14px;
+	font-weight: 300;
 }
 
 @media screen and (max-width: 370px){
 .artBox {
 	width: 40%;
+	}
 }
-}
+
