--- a/main.css
+++ b/main.css
@@ -25,12 +25,17 @@ html {
 	box-sizing: border-box;
 }
 a {
-	color: black;
+	color: #2e2e2e;
 }
 *,
 *:before,
 *:after {
 	box-sizing: inherit;
+}
+
+body{
+	background-color: #f6f6f6;
+	color: #2e2e2e;
 }
 
 #wrapper {
@@ -52,6 +57,7 @@ a {
  	margin-left: 0;
 }
 
+/* Portfolio Section */
 #portfolio{
 	display: flex;
 	flex-direction: row;
@@ -75,7 +81,43 @@ img {
 	display: block;
     margin-left: auto;
     margin-right: auto;
+    cursor: pointer;
+    transition: 0.4s;
 }
+img:hover {
+	opacity: 0.6;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-content{
+	margin: auto;
+	display: block;
+	width: 80%;
+	max-width: 700px;
+	max-height: 80vh;
+	overflow: hidden;
+	animation-name: zoom;
+	animation-direction: 0.6s;
+}
+
+.modal img:hover {
+	opacity: 1;
+	cursor: pointer;
+}
+
 
 /* Navbar Section */
 
@@ -94,6 +136,7 @@ h2 {
 	line-height: 14px;
 	font-weight: 300;
 	padding: 0;
+	color: #bf2726;
 }
 .header{
 	height: 515px;
@@ -120,13 +163,23 @@ h2 {
 	margin-left: 10px;
 	font-size: 20px;
 	padding: 4px;
+	color: #bf2726;
+}
+a:visited {
+	color: #2e2e2e;
+}
+.pageLinks li a:hover {
+	color: #bf2726;
+	border-bottom: 2px solid #bf2726;
 }
 
-a:visited {
-	color: black;
+.socialLinks li a:hover {
+	color: #bf2726;
 }
-a:hover {
-	color: red;
+
+/* footer section */
+footer {
+	display: none;
 }
 
 @media screen and (max-width: 768px){
@@ -180,10 +233,12 @@ a:hover {
 	margin: 0;
 	font-size: 20px;
 	padding: 15px;
+
 }
 .pageLinks li {
 	padding-right: 0px;
 }
+
 #links {
 	margin: 30px auto;
 }
@@ -200,6 +255,25 @@ h2 {
 	letter-spacing: 4.5px;
 	line-height: 14px;
 	font-weight: 300;
+}
+footer {
+	display: block;
+	height: 120px;
+	width: 100%;
+	text-align: center;
+	background-color: #2e2e2e;
+	color: white;
+	padding-top: 40px;
+	margin-top: 25px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	font-size: 12px;
+	border-top: 3px solid #bf2726;
+
+}
+.modal-content {
+        width: 90%;
+    }
 }
 
 @media screen and (max-width: 370px){
