--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@ img:hover {
 	display: none;
 	position: fixed;
 	z-index: 1;
-	padding-top: 100px;
+	padding-top: 3%;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -106,8 +106,8 @@ img:hover {
 	margin: auto;
 	display: block;
 	width: 80%;
+	height: auto;
 	max-width: 700px;
-	max-height: 80%;
 	overflow: hidden;
 	animation-name: zoom;
 	animation-direction: 0.6s;
@@ -274,6 +274,9 @@ footer {
 .modal-content {
         width: 90%;
     }
+.modal {
+	padding-top: 100px;
+}
 }
 
 @media screen and (max-width: 370px){
@@ -281,4 +284,5 @@ footer {
 	width: 40%;
 	}
 }
+
 
